# bevy_midi_params

./: Cargo.toml  LICENSE  README.md  basic_example.ron
bevy_midi_params/: Cargo.toml
bevy_midi_params/examples/: basic.rs  new_architecture.rs  physics_playground.rs  shader_tweaking.rs
bevy_midi_params/src/: controller.rs  error.rs  lib.rs  mapping.rs  midi_plugin.rs  persistence.rs  persistence_plugin.rs  plugin.rs  ui.rs
bevy_midi_params_derive/: Cargo.toml
bevy_midi_params_derive/src/: lib.rs
