[workspace]
members = [
    "bevy_midi_params",
    "bevy_midi_params_derive",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false }
midir = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.10"
egui = "0.32"
bevy_egui = "0.35"
inventory = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.27"

# For the derive macro
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"


